--- a/app/static/less/theme_components/processes.less
+++ b/app/static/less/theme_components/processes.less
@@ -47,6 +47,7 @@
 				}
 			}
 			&:nth-child(even){
+				text-align: left;
 				margin-left: 50%;
 				padding-left: @base-line-height*2;
 				&:after{
